...
                if successful {
                    self.dismiss(animated: true, completion: nil)
//                    self.performSegue(withIdentifier: "showDetail", sender: sender)
                } else {
                    switch error! {
                    case .EmptyUserName, .EmptyPassword:
                        UIAlertController.showAlertTitle(title: "", message: "Empty username/password", cancelButtonTitle: "OK", fromViewController: self)
                    case .UserNotFound:
                        UIAlertController.showAlertTitle(title: "", message: "User not exists", cancelButtonTitle: "OK", fromViewController: self)
                    case .WrongPassword:
                        UIAlertController.showAlertTitle(title: "", message: "Wrong password", cancelButtonTitle: "OK", fromViewController: self)
                    }
                }
...
